--- a/package.json
+++ b/package.json
@@ -16,17 +16,17 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "compression": "^1.7.1",
     "cors": "^2.8.1",
     "dotenv": "^4.0.0",
     "express": "^4.14.0",
     "express-jwt": "^6.0.0",
     "express-jwt-authz": "^2.3.1",
-    "fast-csv": "^3.4.0",
+    "fast-csv": "^4.3.6",
     "jwks-rsa": "^1.1.1",
     "lodash": "^4.17.19",
     "moment": "^2.24.0",
     "mongodb": "^3.3.5",
-    "morgan": "^1.9.1",
-    "compression": "^1.7.1"
+    "morgan": "^1.9.1"
   }
 }
